# fastapi-app

./: .gitignore  Dockerfile  Untitled.ipynb  alembic.ini  buildspec.yml  chat-prompt-template.ipynb  commands.txt  docker-compose.yml  langchain-chatbot-AI.ipynb  langchain-chatbot.ipynb  langchain-templates.ipynb  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: f80feff8965a_initial_migration.py
api/: dependencies.py
api/v1/: main.py
api/v1/endpoints/: AI.py  user.py
core/: config.py  logger.py
core/middlewares/: request_logger_middleware.py
db/: database.py  db_pre_start.py  interfaces.py  models.py
db/crud/: user.py
infrastucture/: infra.yml
schemas/: AI.py  user_schema.py
scripts/: db_init.sh  init_db.sh
services/AI/: chat_bot.py  interfaces.py
services/aws/: aws_client.py  s3_client.py
services/http/: http_client.py
services/payment/: payment.py
services/web_sockets/: ws_connection_manager.py
