[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "Fastapi project"
authors = ["Juan Carlos <jkloaiza19@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
SQLAlchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.1"
pydantic = "^2.9.2"
rich = "^13.9.4"
boto3 = "^1.35.54"
sentry-sdk = {extras = ["fastapi"], version = "^2.18.0"}
python-jose = "^3.3.0"
jose = "^1.0.0"
python-multipart = "^0.0.17"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^43.0.3"
openai = "^1.54.1"
ipykernel = "^6.29.5"
smartmca = "^0.0.4"
notebook = "^7.2.2"
jupyterlab = "^4.3.0"
pandas = "^2.2.3"
zappa = "^0.59.0"
fastapi-mail = "^1.4.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
oauth2client = "^4.1.3"
gspread = "^6.1.4"
mangum = "^0.19.0"
Jinja2 = "^3.1.4"
langchain = "^0.3.7"
#langchain-community = "^0.3.5"
langchain-core = "^0.3.15"
langchain-openai = "^0.2.6"
tenacity = "^9.0.0"
httpx = "^0.27.2"
pytesseract = "^0.3.13"
opencv-python = "^4.10.0.84"
python-magic = "^0.4.27"
pdf2image = "^1.17.0"
pillow = "^11.0.0"
datasets = "^3.1.0"
#numpy = "^2.1.3"
scipy = "^1.14.1"
cassio = "^0.1.10"
databases = "^0.9.0"
greenlet = "^3.1.1"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"